# Nathanwoodburn.github.io

./: .dockerignore  .gitignore  403.css  403.html  404.css  404.html  404.js  404M.html  4A5DFCCD5216D6136E84FDF3D5D57D15.txt  CNAME  Contact.css  Contact.html  Dockerfile  Home.css  Home.html  Nathan-Woodburn---Contact.css  Nathan-Woodburn---Contact.html  Page-1.html  README.md  _headers  about.html  addCoin.py  anu.html  ascii.html  ascii_art.py  banjo.html  banjoold.html  blog.py  cache_helper.py  cleanSite.py  curl.py  czar-89FC3CFA43E356C42382A941A99E4386.html  gitpgp.html  handshake.js  hns.html  index.html  info.html  invalid_shortlink.html  link.html  links.html  (+18 more)
.well-known/: assetlinks.json  xrp-ledger.toml
Invaders/: 404.html  index.html  style.css
assets/: proxy.pac
blueprints/: acme.py  api.py  blog.py  now.py  podcast.py  sol.py  spotify.py  template.py  terminal.py  wellknown.py
data/: ascii.txt  nathanwoodburn.asc  sites.json  tools.json
generator/: index.html  script.js  style.css
libraries/: SQLite_db.php
old/: index.css
pwa/: sw.js
scripts/: form-54b5.php
templates/: 403.html  404.html  about.html  ascii.html  contact.ascii  donate.ascii  donate.html  donate_coin.ascii  donate_more.ascii  error.ascii  favicon.ascii  generator.html  gitpgp.html  header.ascii  hosting.html  index.ascii  index.finger  index.html  info.html  link.html  loading.html  manifest.json  now.ascii  now.html  pgp.html  podcast.html  projects.ascii  projects.html  resume.html  servers.html  signalQR.html  sitemap.xml  spotify.ascii  spotify.html  terminal.html  (+2 more)
(+188 files in other folders)
