[project]
name = "nathanwoodburn-github-io"
version = "1.1.0"
description = "Nathan.Woodburn Personal Website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansi2html>=1.9.2",
    "beautifulsoup4>=4.14.2",
    "cachetools>=6.2.1",
    "cloudflare>=4.3.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pygments>=2.19.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "solana>=0.36.9",
    "solders>=0.26.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
